--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "contentful": "^9.1.4",
     "contentful-management": "^7.44.2",
+    "contentful-parsers": "^1.2.18",
     "cross-env": "^7.0.3",
+    "jsonexport": "^3.2.0",
     "react": "^17.0.2",
+    "react-csv": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.4"
@@ -47,7 +51,9 @@
     ]
   },
   "devDependencies": {
-    "@contentful/app-scripts": "^0.13.29"
+    "@contentful/app-scripts": "^0.13.29",
+    "@types/jsonexport": "^3.0.2",
+    "@types/react-csv": "^1.1.2"
   },
   "homepage": "."
 }
